Fix screenshots squished in carousel

--- a/src/runtime/plugin/style.scss
+++ b/src/runtime/plugin/style.scss
@@ -18,8 +18,9 @@
 	height: 460px;
 
 	& > img {
-		max-width: 100%;
 		height: 100%;
+		width: 90%;
+		object-fit: contain;
 
 		display: block;
 		margin-left: auto;
